--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 header {
     padding: 35px 0 35px 0;
-    background-color: bisque;
+    background-color: rgb(224, 166, 166);
 } 
 
 .head {
@@ -29,6 +29,7 @@ header {
     font-size: 4em;
     font-family: Georgia, 'Times New Roman', Times, serif;
     grid-column: span 2;
+    font-weight: normal;
 }
 
 .dev {
@@ -56,12 +57,16 @@ header {
 .title {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: beige;
+    font-size: 30px;
+    font-weight: normal;
 }
 
 .title:hover{
     background-color: rgb(232, 210, 159);
     transition: all 350ms ease;
+    padding-left: 30px;
 }
+
 
 .info {
     font-size: larger;
@@ -113,6 +118,16 @@ a:hover {
     margin-left: 70px;
 }
 
+.fullname:hover {
+    font-style: italic;
+    padding-left: 50px;
+    transition: all 350ms ease;
+}
+
+.fullname:hover::before {
+    content: "→ ";
+}
+
 .gmail-li {
     display: flex;
     font-size: larger;
@@ -137,4 +152,29 @@ a:hover {
 
 .github-li a {
     margin-left: 65px;
+}
+
+footer ul {
+    padding-top: 5px;
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+}
+
+.git a img:hover {
+    transform: scale(1.3);
+    transition: all 350ms ease;
+}
+
+
+
+.rs a img:hover {
+    transform: scale(1.3);
+    transition: all 350ms ease;
+}
+
+footer {
+    padding: 7px;
+    background-color: rgb(224, 166, 166);
+    margin-top: 10px;
 }
