--- a/coffee-house/styles.css
+++ b/coffee-house/styles.css
@@ -164,7 +164,7 @@ header {
     align-items: flex-start;
     align-self: stretch;
     border-radius: 2.5rem;
-    background: url(https://s3-alpha-sig.figma.com/img/f324/bd18/c8eddb5caed23bba7b8523eb9aea9192?Expires=1702252800&Signature=o-AzVJnUqg8Md7Ai3t9BI6StKKDVo8OCN1wZN3fyBI07FMBhcfp8kF9cutAykSZkmh8ZQeA01~tZEEBiLGgHlisoeDeLRQwxk7QtWKTesl2hrN2aNJfE1a0QVYX9bqQttjghakIq3NfFNmNxCD5--2ZiO087HoyOSOFJknb7nNBnazMK1uuYg4WQz3qvcdl4R9BxTQVMT9-wejP4KAenfXAPnIG1gTVgAnYgKXaKSfGjX7jw~DI2FloZqip~ZSj9tSYU-HkeKcfYFoWfMpXfv5k9Ekv17QMPMatGHAIIxhA1h2aFEhdXCe6scN~iPrv4xbGKXbfnaZkFNakyr5HSbA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
+    background: url(https://s3-alpha-sig.figma.com/img/f324/bd18/c8eddb5caed23bba7b8523eb9aea9192?Expires=1703462400&Signature=DD6XqAU2y1KDJQJloDhoSa6HoCIm7Q-C2l8qDyb39~tN5OFNCPnl7jaw4Yk6JOgGv6GMSWOTLz0ZvCwPiLuHg4D-fVePtBRyOEE5aOAnJYf0korAzOOgo34oZoTl4MA87DfGuMDIRYmrRW0vgiCkNtMikuqCb45O1puRXeKQRwq1CMLh6O~KMZlASPP7hv3K73X5-gFX18yHjPL4PRM-vEIqELPpeHzoW3qJwPAGVnyMVPGDL7wQ3dr7GJEYlIRt06lvEynRLHg~XUFY631ML8SYUUrTpGzLMwkAwCaWxEHKIUHcnAeK1Ahp6eBpkLCR34mPd-V8AH2cOmKUJpvBLw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
     background-size: cover;
 }
 
