--- a/coffee-house/styles.css
+++ b/coffee-house/styles.css
@@ -258,13 +258,13 @@ main {
 .photo1 {
     width: 30rem;
     height: 30rem;
-    background: url(https://s3-alpha-sig.figma.com/img/2348/5773/57d082ae9774ffeb8a409a788e05fef3?Expires=1702252800&Signature=XfD4TVXQlj4TM2D0ViCgTt5OY8vWeHzR6w~f~Rog14Bc7CCJqXwim5KzgpuPKKWsOIWv3VrIo5F9tFo0jZdOdBqY~cUyQCj2uzc6HhfPGCTsKBEJRFG1jLP2DKoMWPjAFrvRCRdK6ZAApZN90XgA5-dZ-A88motRevnqyBR-AOU3X~RVgs~5G3ls-evME8tZeD6UdJOK5~rzyw6vpA8iZQKj7Va-Y~7T27BIkxKh9LRV7jjFqj-o~eUPaNLBDxBNzKCseDNw~EIbsSAfVSqTetoI~laCUQCKuJjcGvzKnQokYwsLRPAGkSYbspZfm53jmWqn9XAtonplTsx8Q8pU7Q__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
+    background: url(https://s3-alpha-sig.figma.com/img/2348/5773/57d082ae9774ffeb8a409a788e05fef3?Expires=1703462400&Signature=HLJ~rhcdyZDc60OqgPyf~yduGOv1xtihOxCuWk86t62i4UGutES2s1N38btp5j6Ck5i3Dd7NUYwcI2EGDzy9XAqOj4VD0DJ-euIFwIugfd-CVOK2R3d1TLAaB2Nl0oIuXehoJ~eZIecg6R-izvX6xkBX4fO2yaW8sFEVfvUiKZ8LIzcebQTV6SAG5AcQTrhKuNn5kcUBtwLJAbCEGMGbNXx0TwfZ~lUxb~-tSKk2g8bx~U9OnTp1-VkQ4-rTBdzRNdZjNNujglIEdKK5P8Z7j74gDQ1GTUg6p2Vw4QuH6aUFOUu9dtiDv1CSKWiwcgeKCpx3jr4PA3rmd4OTmjypyA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
     background-size: cover;
     background-color: #E1D4C9;
 }
 
 .photo2 {
-    background: url(https://s3-alpha-sig.figma.com/img/0289/17e5/ad2ef006eb81febd9107a4628c6aed5f?Expires=1702252800&Signature=jDAMN-htwJ2J45fHDTmWwjaOrSo06RRS5U2Qv1I8HfXQurgGOrc3FUw-05eVY0-hyL2wgEe86PCB-lKOobluCGAZ1qe69EqdigUJCpG0FV2hEj0Cxsep51-HVGRV9ryrvgNKsZT2eZU-LsgGrrnlEavOa0z6OYm5kBrh-No7twhkLkszzj9FVpewH81i5IOGm5spCbALDCEV0wZSijXlEwwBz3IM76HbL5Tb3qU6xpZY5CuZYs3UOaoXYzg453alv~G0zN0IuwuMGme-EtgcXZii1XUY7exNPT4pGBu8a1uuve0tEXO-A2WT3-7k8UDTo3umnGLtHa~FQSTdCDxviQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
+    background: url(https://s3-alpha-sig.figma.com/img/0289/17e5/ad2ef006eb81febd9107a4628c6aed5f?Expires=1703462400&Signature=SsPh-d8roTae9INMoljLoN~NoPNzrJWxBVbgksW2N1GcQcJJJrq4gKPBnVOKV9GtSaOUd6xm1b094k0AQ14jZO3qpUCxnUBLxWIVnTOf7AoXxZ1b1iI5nonvRZCtJQSjuADC6xHL2FJi63ZsmjHBVZ08lck~TwIozgOqEz87dw8jwO1OWMzSgAmoQU3CEousHnQo64wXCY80jQyx4CGzB8fIgisqqhkB7DVEcZGLRHNe2Y-mChzEFUwOpI9fQoSNnmxiHZjI2nkKkF4WCEZHlnc~CGy6~0pf172VCYrPTgPA06zM8x0BzkaP2-jYfzqfJ8fPavZWniiAt8hVblDwww__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
     width: 30rem;
     height: 30rem;
     background-size: cover;
@@ -272,7 +272,7 @@ main {
 }
 
 .photo3 {
-    background: url(https://s3-alpha-sig.figma.com/img/9bf8/7948/8a8302168e0dc8efadd5c0e341d47215?Expires=1702252800&Signature=o7cpVMtdaIaYHkVWRzFTCKBCHk7vRoZOxhWNi63liOT~E5gqSTz8yF606wrv-ygP46eXj0ZbClwhNYBnlc1SR2iSnh~oLUqY-4y~5Z-aWyfiDF6-XMFg3iU3p9pj8yrSAHUe7m1lY4nW6E~B5fQkHerdzBN3DacaHjQizn9lIZFyENAgUsdDqx0BQyP5ZKolYbt5Z3RtkU5rBa27~QBHWW8v0lzUfIDGqWviEzf433TFAzzSZTlTADjKwW5ZuAnwC0miYk4NWGN4FtYkAJFe6zqsHXEJ1UbfByWAfeklmWkG6HN~w4dBCABYNH3d--ceOFab46XH2PrIJWU~d5XbZg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
+    background: url(https://s3-alpha-sig.figma.com/img/9bf8/7948/8a8302168e0dc8efadd5c0e341d47215?Expires=1703462400&Signature=VmIQ5wDUa1q3Bt4~xYoQT~7r6QrMaC6Wf9~qznNTUdAX~3H~UGjY0VNNaBNJNyepmTNKllav5MMiEWSahUULoWxLRleSOkGyh-M9JRBvkiYI-8xLNtAVZ0J2GLIMiQO2QDafkzJPy4p109YKylloSqrLZlPxZiIPa9vhJNVfldGlXgFIZG4DVQ-NgnGRNl40HCmJlfOBbUQqrzjX5Bm6PZ7uSHQu8S6taPFA~ofTR8LVGlZZBJLD1FINbNyl8V-nI3LgDfyd2h8NJ7sQnxHrJcYGIeeScawbkKGijmawVxlAEyzQpTgFE0QAV~KpupyL82B44UJv4IhVrz7kF8f9wg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4), lightgray 50% / cover no-repeat;
     width: 30rem;
     height: 30rem;
     background-size: cover;
